styles/_weekly.scss
.weekly {
  &__header {
    @include stack(.5rem);
  }

  &__overview {
    @include stack(.5rem);
  }

  &__issue {
    display: flex;
    justify-content: space-between;
    gap: .5rem;

    h3 {
      margin-bottom: 0;
    }

    .divider {
      border-bottom: 1px dashed #444;
      flex-grow: 1;
      height: 1em;
    }

    .byline {
      white-space: nowrap;
    }
  }

  &__subscribe_form {
    label {
      font-size: $font-size-small;
    }

    input {
      &[type="email"] {
        padding: 4px 8px;
        border: 1px solid $color-secondary;
        border-right: 0;
        border-radius: 8px 0 0 8px;
      }

      &[type="submit"] {
        background: $color-primary;
        border: 1px solid darken($color-primary, 10%);
        border-radius: 0 8px 8px 0;
        color: #fff;
        padding: 4px 8px;
        cursor: pointer;

        &:active {
          background: darken($color-primary, 10%);
        }
      }
    }
  }
}

